syntax = "proto3";

package product;

option go_package = "github.com/semirm-dev/myt/product/proto";

service Product {
  rpc GetProductsByFilter(GetProductsByFilterRequest) returns(ProductsResponse) {};
}

message GetProductsByFilterRequest {
  int64 price_less_then = 1;
  string by_category = 2;
}

message ProductsResponse {
  repeated ProductMessage products = 1;
}

message ProductMessage {
  string sku = 1;
  string name = 2;
  string category = 3;
  PriceMessage price = 4;
}

message PriceMessage {
  int64 original = 1;
  int64 final = 2;
  string discount_percentage = 3;
  string currency = 4;
}
